# udemy_fastapi

./: README.md  pyproject.toml  requirements.txt
server/: main.py
server/apis/: base.py
server/apis/v1/: route_users.py
server/core/: config.py  hashing.py
server/db/: base_class.py  session.py
server/db/models/: base.py  jobs.py  users.py
server/db/repository/: users.py
server/schemas/: users.py
