[tool.poetry]
name = "jobboard"
version = "0.1.0"
description = "fastapi job board"
authors = ["Alex Story <astory11@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.22"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^6.2.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
